--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Fun Facts!</title>
-    <p>This is my change</p>
+    <link rel="stylesheet" href="./assets/style.css">
+    <p>Choose your player</p>
 </head>
+<main>
+    <form id="search-bar">
+        <button type="submit">Search</button>
+        <input name="search"> 
+    </form>
+    <section id="results-box"></section>
+</main>
 <body>
     
 </body>
+<script src="./assets/script.js"></script>
 </html>
