--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Fun Facts!</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <p>Choose your player</p>
 </head>
+
 <main>
     <form id="search-bar">
         <button type="submit">Search</button>
-        <input name="search"> 
+        <input name="search" type="text" placeholder="Choose your player"> 
     </form>
     <section id="results-box"></section>
+    <section>Player Information</section>
+    <section>Stats & Team</section>
+    <section>League Standing</section>
+    <section>Image</section>
 </main>
 <body>
     
