making new origin request

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <main>
     <form id="search-bar">
         <button type="submit">Search</button>
+        <button type="submit">Saved</button>
         <input name="search" type="text" placeholder="Choose your player"> 
+        <input name="save" type="text" placeholder="Saved players here">
     </form>
     <section id="results-box"></section>
     <section>Player Information</section>
