--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 <main>
   <body>
     <form id="search-bar">
-        <button type="submit">Search</button>
         <button type="submit">Saved</button>
-        <input name="search" type="text" placeholder="Choose your player"> 
-        <input name="save" type="text" placeholder="Saved players here">
+    </form>
+    <!-- API Needs First & Last Name to run properly -->
+    <form id="first-name">
+      <button type="submit">Search</button>
+      <input name="search" type="text" placeholder="First Name"> 
+    </form>
+    <form id="last-name">
+      <button type="submit">Search</button>
+      <input name="search" type="text" placeholder="Last Name"> 
     </form>
     <section id="results-box"></section>
     <section>Player Information</section>
     <section>Stats & Team</section>
     <section>League Standing</section>
-    <section>Image</section>
+    <section>Giphy Image</section>
 
 
 
@@ -29,7 +35,7 @@
 </main>
 <script src="./assets/script.js"></script>
 
-    <title>Document</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
