adding ids to sections

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
       <button type="submit">Search</button>
       <input name="search" type="text" placeholder="Last Name"> 
     </form>
-    <section id="results-box"></section>
-    <section>Player Information</section>
-    <section>Stats & Team</section>
-    <section>League Standing</section>
-    <section>Giphy Image</section>
+    <section id="results-box">Results</section>
+    <section id="player-info">Player Information</section>
+    <section id="stats">Stats & Team</section>
+    <section id="league">League Standing</section>
+    <section id="image">Giphy Image</section>
+
 
 
 
