Made search button functionable

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <main>
   <body>
     <form id="search-bar">
-        <button type="submit">Saved</button>
+        <button type="button" id="saved">Saved</button>
     </form>
     <!-- API Needs First & Last Name to run properly -->
-    <form id="first-name">
-      <button type="submit">Search</button>
-      <input name="search" type="text" placeholder="First Name"> 
-    </form>
-    <form id="last-name">
-      <button type="submit">Search</button>
-      <input name="search" type="text" placeholder="Last Name"> 
+    <form id="full-name">
+      <button type="button" id = "search">Search</button>
+      <input name="search" type="text" placeholder="First Name" id="first-name"> 
+      <input name="search" type="text" placeholder="Last Name" id="last-name"> 
     </form>
     <section id="results-box">Results</section>
     <section id="player-info">Player Information</section>
