adding ids and lists

--- a/index.html
+++ b/index.html
@@ -21,9 +21,27 @@
       <input name="search" type="text" placeholder="Last Name" id="last-name"> 
     </form>
     <section id="results-box">Results</section>
-    <section id="player-info">Player Information</section>
-    <section id="stats">Stats & Team</section>
-    <section id="league">League Standing</section>
+    <section id="player-info">
+      <h3>Player Information</h3>
+      <ul>
+          <li>Team <span id="team"></span> </li>
+          <li>Conference <span id="conference"></span></li>
+          <li>Division <span id="division"></span></li>
+          <li>Position <span id="position"></span></li>
+          <li>Height <span id="height"></span></li>
+          <li>Weight <span id="weight"></span></li>
+      </ul>
+    </section>
+    <section id="stats">
+      <h3>Stats</h3>
+      <ul>
+      <li>Points <span id="points"></span></li>
+      <li>Assists <span id="assists"></span></li>
+      <li>Rebounds <span id="rebounds"></span></li>
+      <li>Steals <span id="steals"></span></li>
+      <li>Turnovers <span id="turnovers"></span></li>
+      </ul>
+    </section>
     <section id="image">Giphy Image</section>
 
 
@@ -34,7 +52,7 @@
 <script src="./assets/script.js"></script>
 
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
 </head>
 <body>
     
