Added giff image

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
         </div>
 
-      <section class="row" id="results-box">Results</section>
-    <section id="image">Giphy Image</section>
+      <section id="results-box">Results</section>
+    <section class="py-6" id="image"></section>
     </div>
     </div>
 
@@ -58,6 +58,5 @@
 
   </main>
   <script src="./assets/script.js"></script>
-  <script src="./assets/main.js"></script>
 </body>
 </html>
