fixing own html

--- a/index.html
+++ b/index.html
@@ -5,34 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>NBA Fun Facts!</title>
-    <link rel="stylesheet" href="./assets/style.css">
-</head>
-
-<main>
-  <body>
-    <form id="search-bar">
-        <button type="button" id="saved">Saved</button>
-    </form>
-    <!-- API Needs First & Last Name to run properly -->
-    <form id="full-name">
-      <button type="button" id = "search">Search</button>
-      <input name="search" type="text" placeholder="First Name" id="first-name"> 
-      <input name="search" type="text" placeholder="Last Name" id="last-name"> 
-    </form>
-    <section id="results-box">Results</section>
-    <section id="player-info">Player Information</section>
-    <section id="stats">Stats & Team</section>
-    <section id="league">League Standing</section>
-    <section id="image">Giphy Image</section>
-
-
-
-
-  </body>
-</main>
-<script src="./assets/script.js"></script>
-
-
+    <!-- <link rel="stylesheet" href="./assets/style.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
