--- a/index.html
+++ b/index.html
@@ -1,65 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>NBA Fun Facts!</title>
-    <link rel="stylesheet" href="./assets/style.css">
-</head>
-
-<main>
-
-
-    <body>
-        <form id="search-bar">
-            <button type="submit">Search</button>
-            <button type="submit">Saved</button>
-            <input name="search" type="text" placeholder="Choose your player">
-            <input name="save" type="text" placeholder="Saved players here">
-        </form>
-        <section id="results-box"></section>
-        <section>Player Information</section>
-        <section>Stats & Team</section>
-        <section>League Standing</section>
-        <section>Image</section>
-
-
-
-    </body>
-</main>
-<script src="./assets/script.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-=======
-  <body>
-    <form id="search-bar">
-        <button type="submit">Saved</button>
-    </form>
-    <!-- API Needs First & Last Name to run properly -->
-    <form id="first-name">
-      <button type="submit">Search</button>
-      <input name="search" type="text" placeholder="First Name"> 
-    </form>
-    <form id="last-name">
-      <button type="submit">Search</button>
-      <input name="search" type="text" placeholder="Last Name"> 
-    </form>
-    <section id="results-box"></section>
-    <section>Player Information</section>
-    <section>Stats & Team</section>
-    <section>League Standing</section>
-    <section>Giphy Image</section>
-
-
-
-  </body>
-</main>
-<script src="./assets/script.js"></script>
-
-
+    <!-- <link rel="stylesheet" href="./assets/style.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-
 </head>
 
 <body>
@@ -130,5 +77,4 @@
   </main>
   <script src="./assets/script.js"></script>
 </body>
-
 </html>
