appending player stats

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <section id="stats">
       <h3>Stats</h3>
       <ul>
-      <li>Points <span id="points"></span></li>
-      <li>Assists <span id="assists"></span></li>
-      <li>Rebounds <span id="rebounds"></span></li>
-      <li>Steals <span id="steals"></span></li>
-      <li>Turnovers <span id="turnovers"></span></li>
+      <li>Points: <span id="points"></span></li>
+      <li>Assists: <span id="assists"></span></li>
+      <li>Rebounds: <span id="rebounds"></span></li>
+      <li>Steals: <span id="steals"></span></li>
+      <li>Turnovers: <span id="turnovers"></span></li>
       </ul>
     </div>
     </section>
