--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li>Conference: <span id="conference"></span></li>
           <li>Division: <span id="division"></span></li>
           <li>Position: <span id="position"></span></li>
-          <li>Height: <span id="height"></span> feet</li>
+          <li>Height: <span id="height"></span> feet <span id="inches"></span> inches</li>
           <li>Weight: <span id="weight"></span> lbs</li>
       </ul>
       </section>
