Created local storage

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         </div>
 
-      <section id="results-box">Results</section>
+      <section id="results-box"></section>
     <section class="py-6" id="image"></section>
     </div>
     </div>
