Added the feaature to click buttons multiple times

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="column  m-5">
       <button class="p-1 button is-info" type="button" id = "search">Search</button>
-      <button class="p-1 button is-info" type="button" id="saved">Save</button>
+      <button class="p-1 button is-info" type="button" id="clear">Clear</button>
         </div>
         </div>
 
