cleared buttons when the user doesnt put any players name

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <button class="p-1 button is-info" type="button" id="clear">Clear</button>
         </div>
         </div>
-
-      <section id="results-box"></section>
+        
+      <section class="column" id="results-box"></section>
     <section class="py-6" id="image"></section>
     </div>
     </div>
