Added submit button to the modal

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="mt-6 has-text-centered">
-          <button class="button is-info">Submit</button>
+          <button class="button is-info" id="submit">Submit</button>
         </div>
       </form>
     </div>
