--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar has shadow is-info">
+  <nav class="navbar has shadow is-danger">
     <section class="navbar-brand">
       <a class="navbar-item">
         <img src="assets/nba-logo.jpeg" alt="nba-logo" style="max-height: 13vh">
@@ -62,7 +62,7 @@
 
       </ul>
       </section>
-    <section class="my-4 mx-4 box has-background-info has-text-light" id="stats">
+    <section class="my-4 mx-4 box has-background-danger has-text-light" id="stats">
       <h3 class="is-size-3">Stats</h3>
       <ul>
       <li class="is-size-4">Points: <span class= "is-size-5" id="points"></span></li>
