--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li class="is-size-4">Conference: <span class="is-size-5" id="conference"></span></li>
           <li class="is-size-4">Division: <span class="is-size-5" id="division"></span></li>
           <li class="is-size-4">Position: <span class="is-size-5" id="position"></span></li>
-          <li class="is-size-4">Height: <span class="is-size-5" id="height"></span> feet <span id="inches"> inches</span></li>
+          <li class="is-size-4">Height: <span class="is-size-5" id="height"></span> feet <span class="is-size-5" id="inches"> inches</span></li>
           <li class="is-size-4">Weight: <span class="is-size-5" id="weight"></span> lbs</li>
 
       </ul>
@@ -115,7 +115,3 @@
   <script src="./assets/script.js"></script>
 </body>
 </html>
-
-<div class="mt-6 has-text-centered">
-  <button class="button is-info" id="submit">Submit</button>
-</div>
