--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
-<body>
+<body class="bg-img">
   <nav class="navbar has shadow is-info">
     <section class="navbar-brand">
       <a class="navbar-item">
