--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <nav class="navbar has shadow is-danger">
-    <section class="navbar-brand">
+  <nav class="navbar has-background-link-dark">
+    <section class="navbar-brand ">
       <a class="navbar-item">
         <img src="assets/nba-logo.jpeg" alt="nba-logo" style="max-height: 13vh">
       </a>
@@ -22,8 +22,8 @@
     </section>
     <section class="navbar-menu is-active" id="nav-links">
       <div class="navbar-end">
-        <a href="https://www.nba.com/" target="_blank" class="navbar-item is-size-3">Visit the official NBA website!</a>
-        <a class="navbar-item is-size-3" id="feedback">Leave a FeedBack</a>
+        <a href="https://www.nba.com/" target="_blank" class="navbar-item is-size-3 has-text-info-light">Visit the official NBA website!</a>
+        <a class="navbar-item is-size-3 has-text-info-light" id="feedback">Leave a FeedBack</a>
       </div>
     </section>
   </nav>
@@ -39,8 +39,8 @@
         </div>
 
         <div class="column  m-5">
-      <button class="p-1 button is-info" type="button" id = "search">Search</button>
-      <button class="p-1 button is-info" type="button" id="clear">Clear</button>
+      <button class="p-1 button has-background-primary" type="button" id = "search">Search</button>
+      <button class="p-1 button has-background-primary" type="button" id="clear">Clear</button>
         </div>
         </div>
         
@@ -50,26 +50,26 @@
     </div>
 
     <div class="column is-6">
-      <section class="my-4 mx-4 box has-background-info has-text-light" id="profile" >
+      <section class="my-4 mx-4 mr-5 px-6 box  has-background-danger-dark has-text-primary" id="profile" >
       <h2 class="is-size-3">Player Information</h2>
       <ul>
-          <li class="is-size-4">Team: <span class="is-size-5" id="team"></span> </li>
-          <li class="is-size-4">Conference: <span class="is-size-5" id="conference"></span></li>
-          <li class="is-size-4">Division: <span class="is-size-5" id="division"></span></li>
-          <li class="is-size-4">Position: <span class="is-size-5" id="position"></span></li>
-          <li class="is-size-4">Height: <span class="is-size-5" id="height"></span> feet <span class="is-size-5" id="inches"> inches</span></li>
-          <li class="is-size-4">Weight: <span class="is-size-5" id="weight"></span> lbs</li>
+          <li class="is-size-4">🏟 Team: <span class="is-size-5" id="team"></span> </li>
+          <li class="is-size-4">🇺🇲 Conference: <span class="is-size-5" id="conference"></span></li>
+          <li class="is-size-4">🇺🇲 Division: <span class="is-size-5" id="division"></span></li>
+          <li class="is-size-4">⛹ Position: <span class="is-size-5" id="position"></span></li>
+          <li class="is-size-4">🧍 Height: <span class="is-size-5" id="height"></span> feet <span class="is-size-5" id="inches"> inches</span></li>
+          <li class="is-size-4">🧍‍♂️ Weight: <span class="is-size-5" id="weight"></span> lbs</li>
 
       </ul>
       </section>
-    <section class="my-4 mx-4 box has-background-danger has-text-light" id="stats">
+    <section class="my-4 mx-4 mr-5 px-6 box has-background-danger-dark has-text-primary" id="stats">
       <h3 class="is-size-3">Stats</h3>
       <ul>
-      <li class="is-size-4">Points: <span class= "is-size-5" id="points"></span></li>
-      <li class="is-size-4">Assists: <span class= "is-size-5" id="assists"></span></li>
-      <li class="is-size-4">Rebounds: <span class= "is-size-5" id="rebounds"></span></li>
-      <li class="is-size-4">Steals: <span class= "is-size-5" id="steals"></span></li>
-      <li class="is-size-4">Turnovers: <span class= "is-size-5" id="turnovers"></span></li>
+      <li class="is-size-4">🗑 Points: <span class= "is-size-5" id="points"></span></li>
+      <li class="is-size-4">⛹️‍♂️ Assists: <span class= "is-size-5" id="assists"></span></li>
+      <li class="is-size-4">⛹️Rebounds: <span class= "is-size-5" id="rebounds"></span></li>
+      <li class="is-size-4">⛹️‍♂️Steals: <span class= "is-size-5" id="steals"></span></li>
+      <li class="is-size-4">⛹️Turnovers: <span class= "is-size-5" id="turnovers"></span></li>
       </ul>
     </div>
     </section>
