--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
-<body id="body">
+<body>
   <nav class="navbar has-background-danger-dark">
     <section class="navbar-brand ">
       <a class="navbar-item">
@@ -49,7 +49,7 @@
     </div>
 
     <div class="column is-6">
-      <section class="my-4 mx-4 mr-6 ml-6 px-6 box  has-background-danger-dark" id="profile" >
+      <section class="mx-4 mr-6 ml-6 px-6 box  has-background-danger-dark" id="profile" >
       <h2 class="is-size-3 has-text-info has-text-weight-bold">Player Information</h2>
       <ul class="has-text-info-light has-text-weight-bold">
           <li class="is-size-4">🏟 Team: <span class="is-size-5" id="team"></span> </li>
@@ -61,7 +61,7 @@
 
       </ul>
       </section>
-    <section class="my-4 mx-4 mr-6 ml-6 px-6 box has-background-danger-dark has-text-primary" id="stats">
+    <section class="mx-4 mr-6 ml-6 px-6 box has-background-danger-dark has-text-primary" id="stats">
       <h3 class="is-size-3 is-size-3 has-text-info has-text-weight-bold">Stats</h3>
       <ul class="has-text-info-light has-text-weight-bold">
       <li class="is-size-4">🗑 Points: <span class= "is-size-5" id="points"></span></li>
